--- a/app/comps/deuda/deuda.html
+++ b/app/comps/deuda/deuda.html
@@ -18,50 +18,25 @@
           <thead>
             <tr>
                 <th scope="col"><p class="text-center">Tipo documento</p></th>
-                <!-- <th scope="col"><p class="text-center">Documento</p></th> -->
                 <th scope="col"><p class="text-center">N° aviso</p></th>
-                <!-- <th scope="col"><p class="text-center">Serie</p></th> -->
                 <th scope="col"><p class="text-center">Fecha documento</p></th>
                 <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
                 <th scope="col"><p class="text-center">Monto Original</p></th>
                 <th scope="col"><p class="text-center">Monto actual</p></th>
                 <th scope="col"><p class="text-center">Fecha entrega</p></th>
-                <!--
-                <th scope="col"><p class="text-center">Saldo</p></th>
-                <th scope="col"><p class="text-center">Tipo venta</p></th>
-                <th scope="col"><p class="text-center">Fecha ultimo pago</p></th>
-                <th scope="col"><p class="text-center">Monto ultimo pago</p></th>
-                <th scope="col"><p class="text-center">Estatus</p></th>
-                <th scope="col"><p class="text-center">codio</p></th>
-                <th scope="col"><p class="text-center">Tipo cambio</p></th>
-                <th scope="col"><p class="text-center">Opciones</p></th> -->
               </tr>
             </thead>
             <tbody>
 
               <tr  ng-repeat="x in listFact"   >
-                <td><p class="text-center">{{ x.nombre_tipo_doc }}</p></td>
-                <!-- <td><p class="text-center">{{ x.docu_aviso }}</p></td> -->
-                <td><p class="text-center">{{ x.no_fisico }}</p></td>
-                <!-- <td><p class="text-center">{{ x.serie_fisico }}</p></td> -->
-                <td><p class="text-center">{{ x.fecha_documento }}</p></td>
-                <td><p class="text-center">{{ x.fecha_vencimiento }}</p></td>
-                <td><p class="text-center">{{ formato(2,x.monto_inicial) }}</p></td>
-                <td><p class="text-center">{{ formato(2,x.monto_actual) }}</p></td>
-                <td><p class="text-center">{{ x.fecha_entrega }}</p></td>
+                <td><p class="text-left">{{ x.nombre_tipo_doc }}</p></td>
+                <td><p class="text-left">{{ x.no_fisico }}</p></td>
+                <td><p class="text-left">{{ x.fecha_documento }}</p></td>
+                <td><p class="text-left">{{ x.fecha_vencimiento }}</p></td>
+                <td><p class="text-right">{{ formato(2,x.monto_inicial) }}</p></td>
+                <td><p class="text-right">{{ formato(2,x.monto_actual) }}</p></td>
+                <td><p class="text-left">{{ x.fecha_entrega }}</p></td>
 
-                <!-- <td><p class="text-center">{{ x.fecha_aviso }}</p></td>
-                <td><p class="text-center">{{ formato(2,x.saldo) }}</p></td>
-                <td><p class="text-center">{{ x.tipo_venta }}</p></td>
-                <td><p class="text-center">{{ x.fecha_ultimo_pago }}</p></td>
-                <td><p class="text-center">{{ x.monto_ultimo_pago }}</p></td>
-                <td><p class="text-center">{{ x.estatus_deuda }}</p></td>
-                <td><p class="text-center">{{ x.nombre_tipo_doc }}</p></td>
-                <td><p class="text-center">{{ x.tipo_cambio }}</p></td> -->
-
-                <!-- <td>
-                  <i class="fa fa-eye" style="cursor: pointer;"   ng-click=""  data-toggle="modal" data-target="#modalFactura"  ></i>
-                </td> -->
               </tr>
 
 
@@ -174,41 +149,18 @@
                             <th scope="col"><p class="text-center">Fecha documento</p></th>
                             <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
                             <th scope="col"><p class="text-center">Saldo</p></th>
-                            <!-- <th scope="col"><p class="text-center">Tipo venta</p></th>
-                              <th scope="col"><p class="text-center">Monto inicial</p></th>
-                              <th scope="col"><p class="text-center">Fecha ultimo pago</p></th>
-                              <th scope="col"><p class="text-center">Monto ultimo pago</p></th>
-                              <th scope="col"><p class="text-center">Estatus</p></th>
-                              <th scope="col"><p class="text-center">codio</p></th>
-                              <th scope="col"><p class="text-center">Tipo cambio</p></th>
-                              <th scope="col"><p class="text-center">Fecha aviso</p></th>
-                              <th scope="col"><p class="text-center">Documento aviso</p></th>
-                              <th scope="col"><p class="text-center">Serie</p></th>
-                              <th scope="col"><p class="text-center">Opciones</p></th> -->
+
                             </tr>
                           </thead>
                           <tbody>
 
                             <tr  ng-repeat="x in listFact"   >
-                              <td><p class="text-center">{{ x.nombre_tipo_doc }}</p></td>
-                              <td><p class="text-center">{{ x.no_fisico }}</p></td>
-                              <td><p class="text-center">{{ x.fecha_documento }}</p></td>
-                              <td><p class="text-center">{{ x.fecha_vencimiento }}</p></td>
-                              <td><p class="text-center">{{ formato(2,x.monto_actual) }}</p></td>
-                              <!-- <td><p class="text-center">{{ x.tipo_venta }}</p></td>
-                                <td><p class="text-center">{{ x.monto_inicial }}</p></td>
-                                <td><p class="text-center">{{ x.fecha_ultimo_pago }}</p></td>
-                                <td><p class="text-center">{{ x.monto_ultimo_pago }}</p></td>
-                                <td><p class="text-center">{{ x.estatus_deuda }}</p></td>
-                                <td><p class="text-center">{{ x.codigo_tipo_doc }}</p></td>
-                                <td><p class="text-center">{{ x.tipo_cambio }}</p></td>
-                                <td><p class="text-center">{{ x.fecha_aviso }}</p></td>
-                                <td><p class="text-center">{{ x.docu_aviso }}</p></td>
-                                <td><p class="text-center">{{ x.serie_fisico }}</p></td> -->
-
-                                <!-- <td>
-                                  <i class="fa fa-eye" style="cursor: pointer;"   ng-click="selectFactura(facturasList[fact])"  data-toggle="modal" data-target="#modalFactura"  ></i>
-                                </td> -->
+                              <td><p class="text-left">{{ x.nombre_tipo_doc }}</p></td>
+                              <td><p class="text-left">{{ x.no_fisico }}</p></td>
+                              <td><p class="text-left">{{ x.fecha_documento }}</p></td>
+                              <td><p class="text-left">{{ x.fecha_vencimiento }}</p></td>
+                              <td><p class="text-right">{{ formato(2,x.monto_actual) }}</p></td>
+                              
                               </tr>
 
 
@@ -221,21 +173,18 @@
                         <thead>
                           <tr>
 
-
-                            <!-- <th scope="col"><p class="text-center">N° de documento</p></th> -->
                             <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
                             <th scope="col"><p class="text-center">Saldo BS</p></th>
                             <th scope="col"><p class="text-center">Saldo Usd</p></th>
-                            <!-- <th scope="col"><p class="text-center">Tipo documento</p></th> -->
                           </tr>
                         </thead>
                         <tbody>
 
                           <tr  ng-repeat="x in vencimiento"   >
                             <!-- <td><p class="text-center">{{ x.no_fisico }}</p></td> -->
-                            <td><p class="text-center">{{ x.fecha_vencimiento }}</p></td>
-                            <td><p class="text-center">{{ formato(2,x.saldo) }}</p></td>
-                            <td><p class="text-center">{{ formato(1,x.saldo_usd) }}</p></td>
+                            <td><p class="text-left">{{ x.fecha_vencimiento }}</p></td>
+                            <td><p class="text-right">{{ formato(2,x.saldo) }}</p></td>
+                            <td><p class="text-right">{{ formato(1,x.saldo_usd) }}</p></td>
                             <!-- <td><p class="text-center">{{ x.nombre_tipo_doc }}</p></td> -->
                           </tr>
 
@@ -255,40 +204,16 @@
                           <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
                           <th scope="col"><p class="text-center">N° Documento</p></th>
                           <th scope="col"><p class="text-center">Saldo</p></th>
-                          <!-- <th scope="col"><p class="text-center">N° de documento</p></th>
-                            <th scope="col"><p class="text-center">Tipo venta</p></th>
-                            <th scope="col"><p class="text-center">Monto inicial</p></th>
-                            <th scope="col"><p class="text-center">Monto actual</p></th>
-                            <th scope="col"><p class="text-center">Fecha ultimo pago</p></th>
-                            <th scope="col"><p class="text-center">Monto ultimo pago</p></th>
-                            <th scope="col"><p class="text-center">Estatus</p></th>
-                            <th scope="col"><p class="text-center">codio</p></th>
-                            <th scope="col"><p class="text-center">Tipo documento</p></th>
-                            <th scope="col"><p class="text-center">Tipo cambio</p></th>
-                            <th scope="col"><p class="text-center">Serie</p></th>
-                            <th scope="col"><p class="text-center">Fecha documento</p></th> -->
                             <th scope="col"><p class="text-center">Opciones</p></th>
                           </tr>
                         </thead>
                         <tbody>
 
                           <tr  ng-repeat="x in listAvisos"   >
-                            <td><p class="text-center">{{ x.fecha_aviso }}</p></td>
-                            <td><p class="text-center">{{ x.fecha_vencimiento }}</p></td>
-                            <td><p class="text-center">{{ x.docu_aviso }}</p></td>
-                            <td><p class="text-center">{{ formato(2,x.saldo) }}</p></td>
-                            <!-- <td><p class="text-center">{{ x.no_fisico }}</p></td>
-                              <td><p class="text-center">{{ x.tipo_venta }}</p></td>
-                              <td><p class="text-center">{{ x.monto_inicial }}</p></td>
-                              <td><p class="text-center">{{ x.monto_actual }}</p></td>
-                              <td><p class="text-center">{{ x.fecha_ultimo_pago }}</p></td>
-                              <td><p class="text-center">{{ x.monto_ultimo_pago }}</p></td>
-                              <td><p class="text-center">{{ x.estatus_deuda }}</p></td>
-                              <td><p class="text-center">{{ x.codigo_tipo_doc }}</p></td>
-                              <td><p class="text-center">{{ x.nombre_tipo_doc }}</p></td>
-                              <td><p class="text-center">{{ x.tipo_cambio }}</p></td>
-                              <td><p class="text-center">{{ x.serie_fisico }}</p></td>
-                              <td><p class="text-center">{{ x.fecha_documento }}</p></td> -->
+                            <td><p class="text-left">{{ x.fecha_aviso }}</p></td>
+                            <td><p class="text-left">{{ x.fecha_vencimiento }}</p></td>
+                            <td><p class="text-left">{{ x.docu_aviso }}</p></td>
+                            <td><p class="text-right">{{ formato(2,x.saldo) }}</p></td>
 
                               <td>
                                 <i class="fa fa-eye" style="cursor: pointer;"   ng-click="selectAviso(x)"  data-toggle="modal" data-target="#showDeudaModal"  ></i>
