--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -40,17 +40,17 @@
 
                         <tr ng-repeat="x in factura"  >
 
-                            <td><p class="text-center">{{ x.no_linea }}</p></td>
-                            <td><p class="text-center">{{ x.nombre_arti }}</p></td>
+                            <td><p class="text-left">{{ x.no_linea }}</p></td>
+                            <td><p class="text-left">{{ x.nombre_arti }}</p></td>
                             <!-- <td><p class="text-right">{{  x.fecha_pedido }}</p></td> -->
                             <!-- <td><p class="text-right">{{  x.fecha_factura }}</p></td> -->
-                            <td><p class="text-center">{{ x.unidades_pedido }}</p></td>
-                            <td><p class="text-center">{{ x.unidades_facturadas }}</p></td>
+                            <td><p class="text-left">{{ x.unidades_pedido }}</p></td>
+                            <td><p class="text-left">{{ x.unidades_facturadas }}</p></td>
                             <!-- <td><p class="text-right">{{  x.nombre_vendedor }}</p></td>
                             <td><p class="text-right">{{  x.email_vendedor }}</p></td> -->
 
-                            <td><p class="text-center">{{ calculaMontoLinea (x.total_producto, x.unidades_facturadas, 2)  }}</p></td>
-                            <td><p class="text-center">{{ calculaMontoLinea (x.total_producto_usd, x.unidades_facturadas, 3)  }}</p></td>
+                            <td><p class="text-right">{{ calculaMontoLinea (x.total_producto, x.unidades_facturadas, 2)  }}</p></td>
+                            <td><p class="text-right">{{ calculaMontoLinea (x.total_producto_usd, x.unidades_facturadas, 3)  }}</p></td>
 
                             <!-- <td><p class="text-center">{{ x.total_producto}}</p></td>
                             <td><p class="text-center">{{ x.total_producto_usd }}</p></td> -->
@@ -206,15 +206,15 @@
 
                       <tr  ng-repeat="fact in facturas | orderBy:'-fecha_facturaDate'" ng-class="{ selectedRow : $index == productIndex }" >
                         <td><p class="text-center">{{ $index + 1 }}</p></td>
-                        <!-- <td><p class="text-center">{{ fact }}</p></td> -->
-                        <!-- <td><p class="text-center">{{ facturasList[fact][0].fecha_pedido }}</p></td> -->
-                        <td><p class="text-center">{{ fact.nro_factura }}</p></td>
-                        <td><p class="text-center">{{ fact.fecha_factura }}</p></td>
-                        <td><p class="text-center">{{ formato(2,facturasTotales[fact.nro_factura].total_bs) }}</p></td>
-                        <td><p class="text-center">{{ formato(3,facturasTotales[fact.nro_factura].total_usd) }}</p></td>
-                        <td><p class="text-center">{{ fact.tipo_pedido }}</p></td>
-                        <td ng-if="!isEmpleado" ><p class="text-center">{{ fact.fecha_entrega }}</p></td>
-                        <!-- <td><p class="text-center">{{  facturasList[fact][0].email_vendedor }}</p></td> -->
+                        <!-- <td><p class="text-left">{{ fact }}</p></td> -->
+                        <!-- <td><p class="text-left">{{ facturasList[fact][0].fecha_pedido }}</p></td> -->
+                        <td><p class="text-left">{{ fact.nro_factura }}</p></td>
+                        <td><p class="text-left">{{ fact.fecha_factura }}</p></td>
+                        <td><p class="text-right">{{ formato(2,facturasTotales[fact.nro_factura].total_bs) }}</p></td>
+                        <td><p class="text-right">{{ formato(3,facturasTotales[fact.nro_factura].total_usd) }}</p></td>
+                        <td><p class="text-left">{{ fact.tipo_pedido }}</p></td>
+                        <td ng-if="!isEmpleado" ><p class="text-left">{{ fact.fecha_entrega }}</p></td>
+                        <!-- <td><p class="text-left">{{  facturasList[fact][0].email_vendedor }}</p></td> -->
                         <td>
                           <i class="fa fa-eye" style="cursor: pointer;"   ng-click="selectFactura(fact.detalle)"  data-toggle="modal" data-target="#modalFactura"  ></i>
                         </td>
