--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -133,12 +133,12 @@
 
             <tr ng-repeat="x in listaProd">
               <th scope="row">{{ $index + 1 }}</th>
-              <td><p class="text-center">{{ x.nombre_producto }}</p></td>
-              <td><p class="text-center">{{ x.categoria }}</p></td>
-              <td><p class="text-center">{{ x.proveedor }}</p></td>
-              <td><p class="text-center">{{ x.princ_activo }}</p></td>
-              <td><p class="text-center">{{ x.fecha_vence }}</p></td>
-              <td><p class="text-center">{{ x.existencia }}</p></td>
+              <td><p class="text-left">{{ x.nombre_producto }}</p></td>
+              <td><p class="text-left">{{ x.categoria }}</p></td>
+              <td><p class="text-left">{{ x.proveedor }}</p></td>
+              <td><p class="text-left">{{ x.princ_activo }}</p></td>
+              <td><p class="text-left">{{ x.fecha_vence }}</p></td>
+              <td><p class="text-left">{{ x.existencia }}</p></td>
 
             </tr>
           </tbody>
